--- a/README
+++ b/README
@@ -75,7 +75,7 @@ Possible options:
 
 Author
 ------
-Zbigniew M. Kempczynski (wegorz), Z.Kempczynski@marton.pl
+Zbigniew Kempczyński (wegorz76@gmail.com)
 
 License
 -------
